projetGL/src/test/deca/extension/synt/invalid/test_invalid_18.deca
{
    int [][] tab=[1,[2,3]];
}